Finishing multiple choice question editor

--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/QuestionEditorPage.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/QuestionEditorPage.html
@@ -6,6 +6,9 @@
 		</a>
 	</div>
 	<div>
+		<a wicket:id="newMultipleChoiceLink" >New Multiple Choice</a>
+	</div>
+	<div>
 		<div wicket:id="questionViewer" />
 		<div wicket:id="questionEditor" />
 	</div>
